--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,20 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				<configuration>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>${mule.version}</muleVersion>
+						<username>${ap.username}</username>
+						<password>${ap.password}</password>
+						<environment>${env}</environment>
+						<applicationName>${app name}</applicationName>
+						<businessGroup>${bg}</businessGroup>
+						<workerType>${vCore}</workerType>
+						<workers>${workers}</workers>
+						<objectStoreV2>true</objectStoreV2>
+					</cloudHubDeployment>
+				</configuration>			
 			</plugin>
 		</plugins>
 	</build>
